Fix events bugs

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -267,9 +267,17 @@
 	"scheduler_save": "Scheduled task save",
 	"scheduler_save_success": "Success",
 	"scheduler_save_error": "Error",
+	"scheduler_remove": "Remove scheduled task",
+	"scheduler_remove_confirm": "Are you sure you want to remove this scheduled task ?",
+	"scheduler_remove_success": "Success",
+	"scheduler_remove_error": "Error",
 	"trigger_save": "Save triggered task",
 	"trigger_save_success": "Success",
 	"trigger_save_error": "Error",
+	"trigger_remove": "Remove triggered task",
+	"trigger_remove_confirm": "Are you sure you want to remove this triggered task ?",
+	"trigger_remove_success": "Success",
+	"trigger_remove_error": "Error",
 	"schedulers_title": "Scheduled tasks",
 	"triggers_title": "Triggered tasks",
 	"scheduler_title": "Scheduled task",
