--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -267,9 +267,17 @@
 	"scheduler_save": "Sauvegarde d'une tâche planifiée",
 	"scheduler_save_success": "Succès",
 	"scheduler_save_error": "Erreur",
+	"scheduler_remove": "Suppression de tâche planifiée",
+	"scheduler_remove_confirm": "Êtes-vous sûr de vouloir supprimer cette tâche planifiée ?",
+	"scheduler_remove_success": "Succès",
+	"scheduler_remove_error": "Erreur",
 	"trigger_save": "Sauvegarde d'une tâche déclenchée",
 	"trigger_save_success": "Succès",
 	"trigger_save_error": "Erreur",
+	"trigger_remove": "Suppression de tâche déclenchée",
+	"trigger_remove_confirm": "Êtes-vous sûr de vouloir supprimer cette tâche déclenchée ?",
+	"trigger_remove_success": "Succès",
+	"trigger_remove_error": "Erreur",
 	"schedulers_title": "Tâches planifiées",
 	"triggers_title": "Tâches déclenchées",
 	"scheduler_title": "Tâche planifiée",
