--- a/src/components/carleonMpd/i18n/en.json
+++ b/src/components/carleonMpd/i18n/en.json
@@ -13,7 +13,7 @@
 	"carleon_mpd_playlists_title": "Playlsts",
 	"carleon_mpd_playlist_load": "Load",
 	"carleon_mpd": "Jukebox",
-	"carleon_mpd_load_error": "Loading error",
+	"carleon_mpd_load_error": "Loading error jukebos {{name}}",
 	"carleon_mpd_volume_error": "Change volume error",
 	"carleon_mpd_load_playlist_error": "Load playlist error",
 	"carleon_mpd_playing_title": "Title",
@@ -29,5 +29,7 @@
 	"carleon_mpd_command_playlist_parameter_plsylist_title": "Result",
 	"carleon_mpd_command_volume_title": "Volume",
 	"carleon_mpd_command_volume_parameter_volume_title": "Value",
-	"carleon_mpd_command_volume_result_title": "Result"
+	"carleon_mpd_command_volume_result_title": "Result",
+	"carleon_mpd_remove": "Remove",
+	"carleon_mpd_confirm": "Are you sure you want to remove this jukebox?"
 }
