--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -2,6 +2,7 @@
 	"login_title": "Login",
 	"login_title_success": "Success",
 	"login_title_error": "Connection error",
+	"dimmer_update_title": "Dimmer",
 	"dimmer_edit": "Edit",
 	"dimmer_update_name": "Name: ",
 	"dimmer_update_enabled": "Enabled: ",
@@ -469,5 +470,9 @@
 	"alert_http_header_key": "Key",
 	"alert_http_header_value": "Value",
 	"alert_http_method_other": "Other",
-	"image_title": "Image: "
+	"image_title": "Image: ",
+	"refresh": "Refresh",
+	"refresh_device_error": "Error during devices refresh",
+	"refresh_scripts_events_error": "Error during scripts and events refresh",
+	"refresh_carleon_error": "Error during carleon refresh"
 }
