Use Angular-nvD3 for monitors

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -37,6 +37,7 @@
 	"heater_mode_cool": "Cool",
 	"monitor_title": "Monitor: ",
 	"monitor_close": "Close",
+	"monitor_date_axis": "Date",
 	"monitor_1_minute": "1 minute",
 	"monitor_2_minutes": "2 minutes",
 	"monitor_5_minutes": "5 minutes",
@@ -127,7 +128,7 @@
 	"heaters_title": "Heaters",
 	"monitor": "Monitor",
 	"menu_home": "Home",
-	"menu_lights": "Lights",
+	"menu_lights": "Lights/Switches",
 	"menu_heaters": "Heaters",
 	"menu_sensors": "Sensors",
 	"menu_scripts": "Scripts",
