--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -37,6 +37,7 @@
 	"heater_mode_cool": "Rafraîchit",
 	"monitor_title": "Moniteur: ",
 	"monitor_close": "Fermer",
+	"monitor_date_axis": "Date",
 	"monitor_1_minute": "1 minute",
 	"monitor_2_minutes": "2 minutes",
 	"monitor_5_minutes": "5 minutes",
@@ -127,7 +128,7 @@
 	"heaters_title": "Thermostats",
 	"monitor": "Moniteur",
 	"menu_home": "Accueil",
-	"menu_lights": "Lumières",
+	"menu_lights": "Lumières/Interrupteurs",
 	"menu_heaters": "Thermostats",
 	"menu_sensors": "Capteurs",
 	"menu_scripts": "Tâches",
