--- a/src/components/carleonMotion/i18n/fr.json
+++ b/src/components/carleonMotion/i18n/fr.json
@@ -30,5 +30,6 @@
 	"carleon_motion_command_online_result_title": "Connexion",
 	"carleon_motion_command_snapshot_title": "Prendre un snapshot",
 	"carleon_motion_command_snapshot_parameter_stream_title": "Flux de caméra",
-	"carleon_motion_command_snapshot_result_title": "Résultat"
+	"carleon_motion_command_snapshot_result_title": "Résultat",
+	"carleon_motion_stream_open": "Ouvrir les flux"
 }
