--- a/src/components/carleonMotion/i18n/en.json
+++ b/src/components/carleonMotion/i18n/en.json
@@ -1,6 +1,6 @@
 {
 	"carleon_motion_title": "Cameras",
-	"carleon_motion_modal_title": "Caméras",
+	"carleon_motion_modal_title": "Cameras",
 	"carleon_motion_modal_name": "Name",
 	"carleon_motion_modal_description": "Description",
 	"carleon_motion_modal_config_uri": "Service configuration url",
