--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -218,7 +218,7 @@
 	"profile_used": "Current profile",
 	"service_add": "Add",
 	"event_modal_title": "Events",
-	"events_title": "Événements",
+	"events_title": "Events",
 	"events_button_add": "Add an event",
 	"event_type_select": "Event type",
 	"event_type_scheduler": "Scheduled",
