Add confirm popup on submdule enable/disable

--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -147,6 +147,8 @@
 	"param_submodule_benoic": "Benoic",
 	"param_submodule_carleon": "Carleon",
 	"param_submodule_gareth": "Gareth",
+	"param_submodule_enable": "Changement d'état",
+	"param_submodule_enable_confirm": "Êtes-vous sûr de vouloir changer l'état de ce sous-module ?",
 	"param_admin_global": "Global",
 	"param_admin_mode": "Mode administrateur",
 	"param_device_list": "Liste des dispositifs domotiques",
