Add clean profile button

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -215,7 +215,9 @@
 	"profiles_remove_success": "Success",
 	"profiles_remove_error": "Error",
 	"profile_remove": "Profile",
-	"profile_remove_confirm": "Are you sure you want to remove that profile ?",
+	"profile_remove_confirm": "Are you sure you want to remove that profile?",
+	"profile_clean": "Clean profile",
+	"profile_clean_confirm": "Are you sure you want to clean this profile? All data will be removed.",
 	"profiles_save_success": "Success",
 	"profiles_save_error": "Error",
 	"profile_used": "Current profile",
