Add Taulas parameters

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -170,6 +170,12 @@
 	"24-67-99_user_path": "Path to Openzwave working folder",
 	"24-67-99_command_line": "Openzwave command line options",
 	"24-67-99_log_path": "Openzwave log file name",
+	"24-67-85_device_type": "Taulas",
+	"24-67-85_uri": "Connection URL",
+	"24-67-85_do_not_check_certificate": "Do not check certificate",
+	"24-67-85_old_version": "Old Taulas version",
+	"24-67-85_user": "Login",
+	"24-67-85_password": "Password",
 	"device_add": "Add a device", 
 	"device_add_success": "Device added", 
 	"device_add_error": "Error",
