--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -170,6 +170,12 @@
 	"24-67-99_user_path": "Chemin vers le répertoire de travail de Openzwave",
 	"24-67-99_command_line": "Options supplémentaires pour Openzwave",
 	"24-67-99_log_path": "Nom du fichier de journaux Openzwave",
+	"24-67-85_device_type": "Taulas",
+	"24-67-85_uri": "URL de connexion",
+	"24-67-85_do_not_check_certificate": "Ne pas vérifier le certificat",
+	"24-67-85_old_version": "Ancienne version du service Taulas",
+	"24-67-85_user": "Login utilisateur",
+	"24-67-85_password": "Mot de passe",
 	"device_add": "Ajout d'un dispositif", 
 	"device_add_success": "Dispositif ajouté", 
 	"device_add_error": "Erreur",
