--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -149,6 +149,8 @@
 	"param_submodule_gareth": "Gareth",
 	"param_submodule_enable": "Status change",
 	"param_submodule_enable_confirm": "Are you sure you want to change this submodule state?",
+	"param_submodule_benoic_reload_types": "Reload device types",
+	"param_submodule_carleon_reload_services": "Reload service types",
 	"param_admin_global": "Global",
 	"param_admin_mode": "Admin mode",
 	"param_device_list": "List of house automation devices",
