Add device types and services list in paramters page

--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -154,6 +154,11 @@
 	"param_admin_global": "Global",
 	"param_admin_mode": "Mode administrateur",
 	"param_device_list": "Liste des dispositifs domotiques",
+	"param_benoic_device_type_list": "Liste des types de dispositifs domotiques",
+	"param_carleon_service_list": "Liste des services Carleon",
+	"carleon_services": "Services Carleon",
+	"carleon_services_enabled_success": "Succès",
+	"carleon_services_enabled_error": "Erreur",
 	"device_name": "Nom",
 	"device_description": "Description",
 	"device_type": "Type",
