--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -151,6 +151,11 @@
 	"param_submodule_enable_confirm": "Are you sure you want to change this submodule state?",
 	"param_submodule_benoic_reload_types": "Reload device types",
 	"param_submodule_carleon_reload_services": "Reload service types",
+	"param_benoic_device_type_list": "Device types list",
+	"param_carleon_service_list": "Carleon services list",
+	"carleon_services": "Carleon services",
+	"carleon_services_enabled_success": "Success",
+	"carleon_services_enabled_error": "Error",
 	"param_admin_global": "Global",
 	"param_admin_mode": "Admin mode",
 	"param_device_list": "List of house automation devices",
