--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -2,6 +2,7 @@
 	"login_title": "Login",
 	"login_title_success": "Success",
 	"login_title_error": "Connection error",
+	"error_api_unavailable": "Error, API server unavailable",
 	"dimmer_update_title": "Dimmer",
 	"dimmer_edit": "Edit",
 	"dimmer_update_name": "Name: ",
