--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -2,6 +2,7 @@
 	"login_title": "Connexion",
 	"login_title_success": "Succès",
 	"login_title_error": "Erreur de connexion",
+	"error_api_unavailable": "Erreur, serveur d'API inaccessible",
 	"dimmer_update_title": "Gradateur",
 	"dimmer_edit": "Modifier",
 	"dimmer_update_name": "Nom: ",
