Small bugfixes, and implement taulas 2.0 device

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -36,6 +36,8 @@
 	"heater_mode_keep": "Keep current",
 	"heater_mode_heat": "Heat",
 	"heater_mode_cool": "Cool",
+	"heater_mode_away": "Away",
+	"heater_mode_present": "Present",
 	"monitor_title": "Monitor: ",
 	"monitor_close": "Close",
 	"monitor_date_axis": "Date",
@@ -180,6 +182,7 @@
 	"24-67-99_log_path": "Openzwave log file name",
 	"24-67-85_device_type": "Taulas",
 	"24-67-85_uri": "Connection URL",
+	"24-67-85_send_alert_uri": "Alerte URL configuration",
 	"24-67-85_do_not_check_certificate": "Do not check certificate",
 	"24-67-85_old_version": "Old Taulas version",
 	"24-67-85_user": "Login",
