--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -35,7 +35,9 @@
 	"heater_mode_manual": "Manuel",
 	"heater_mode_keep": "Maintenir",
 	"heater_mode_heat": "Chauffe",
-	"heater_mode_cool": "Rafraîchit",
+	"heater_mode_cool": "Rafraîchir",
+	"heater_mode_away": "Absent",
+	"heater_mode_present": "Présent",
 	"monitor_title": "Moniteur: ",
 	"monitor_close": "Fermer",
 	"monitor_date_axis": "Date",
@@ -180,6 +182,7 @@
 	"24-67-99_log_path": "Nom du fichier de journaux Openzwave",
 	"24-67-85_device_type": "Taulas",
 	"24-67-85_uri": "URL de connexion",
+	"24-67-85_send_alert_uri": "URL de configuration d'alerte",
 	"24-67-85_do_not_check_certificate": "Ne pas vérifier le certificat",
 	"24-67-85_old_version": "Ancienne version du service Taulas",
 	"24-67-85_user": "Login utilisateur",
