Remove alert management

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -421,6 +421,8 @@
 	"logs_filter_button": "Filters",
 	"logs_search": "Logs search",
 	"logs_search_error": "Error in input parameters, limit and offset must be positive integers",
+	"logs_alerts_delete_button": "Delete alerts",
+	"logs_filters_show_button": "Manage filters",
 	"modal_button_ok": "OK",
 	"modal_button_cancel": "Cancel",
 	"logs_filter_modal_title": "Logs filters",
@@ -429,6 +431,9 @@
 	"logs_filter_new_button": "Add a filter",
 	"logs_clause_new_button": "Add a clause",
 	"logs_alert_new_button": "Add an alert",
+	"logs_alert": "Alert",
+	"logs_alert_remove_success": "Remove was succesfull",
+	"logs_alert_remove_error": "Error removing alert",
 	"filter_table_edit": "Edit a filter",
 	"filter_table_new": "New filter",
 	"filter_table_clauses": "Clauses",
