--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -421,6 +421,8 @@
 	"logs_filter_button": "Filtres",
 	"logs_search": "Recherche de journaux",
 	"logs_search_error": "Erreur dans les paramères en entrée, limite et offset doivent être positifs",
+	"logs_alerts_delete_button": "Supprimer des alertes",
+	"logs_filters_show_button": "Gérer les filtres",
 	"modal_button_ok": "OK",
 	"modal_button_cancel": "Annuler",
 	"logs_filter_modal_title": "Filtres des journaux",
@@ -428,6 +430,9 @@
 	"logs_filter_error": "Erreur",
 	"logs_filter_new_button": "Ajouter un filtre",
 	"logs_clause_new_button": "Ajouter une clause",
+	"logs_alert": "Alerte",
+	"logs_alert_remove_success": "Suppression réalisée avec succès",
+	"logs_alert_remove_error": "Erreur lors de la suppression",
 	"logs_alert_new_button": "Ajouter une alerte",
 	"filter_table_edit": "Éditer un filtre",
 	"filter_table_new": "Nouveau filtre",
