Add placeholders messages when useful

--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -38,6 +38,7 @@
 	"heater_mode_cool": "Rafraîchir",
 	"heater_mode_away": "Absent",
 	"heater_mode_present": "Présent",
+	"heater_unit_placeholder": "Ex °C ou °F",
 	"monitor_title": "Moniteur: ",
 	"monitor_close": "Fermer",
 	"monitor_date_axis": "Date",
@@ -69,6 +70,7 @@
 	"sensor_save_error": "Erreur",
 	"sensor_edit": "Modifier",
 	"sensor_monitor": "Moniteur",
+	"sensor_unit_placeholder": "°C, °F, %, etc.",
 	"switch_update_title": "Interrupteur",
 	"switch_update_name": "Nom: ",
 	"switch_update_enabled": "Actif: ",
@@ -171,22 +173,36 @@
 	"device_options_title": "Options du type",
 	"00-00-00_device_type": "Développement",
 	"00-00-00_uri": "URI de connexion",
+	"00-00-00_uri_placeholder": "ex: http://example.com/",
 	"00-00-00_baud": "Vitesse de connexion",
+	"00-00-00_baud_placeholder": "ex: 9600",
 	"00-00-00_do_not_check_certificate": "Ne pas vérifier le certificat",
 	"00-00-00_device_specified": "Options",
+	"00-00-00_device_specified_placeholder": "ex: A=1",
 	"24-67-99_device_type": "Openzwave",
-	"24-67-99_uri": "URI vers le dispositif (ex: /dev/ttyACM)",
+	"24-67-99_uri": "URI vers le dispositif",
+	"24-67-99_uri_placeholder": "ex: /dev/ttyACM",
 	"24-67-99_config_path": "Chemin vers les fichiers de configuration Openzwave",
+	"24-67-99_config_path_placeholder": "ex: /etc/openzwave",
 	"24-67-99_user_path": "Chemin vers le répertoire de travail de Openzwave",
+	"24-67-99_user_path_placeholder": "ex: /var/lib/openzwave",
 	"24-67-99_command_line": "Options supplémentaires pour Openzwave",
+	"24-67-99_command_line_placeholder": "ex: logging=true",
 	"24-67-99_log_path": "Nom du fichier de journaux Openzwave",
+	"24-67-99_log_path_placeholder": "ex: /var/log/openzwave/openzwave.log",
 	"24-67-85_device_type": "Taulas",
 	"24-67-85_uri": "URL de connexion",
+	"24-67-85_uri_placeholder": "ex: http://taulas_host:858/taulas?command=",
 	"24-67-85_send_alert_uri": "URL de configuration d'alerte",
+	"24-67-85_send_alert_uri_placeholder": "ex: http://taulas_host:858/taulas/alertCb?url=",
 	"24-67-85_do_not_check_certificate": "Ne pas vérifier le certificat",
 	"24-67-85_old_version": "Ancienne version du service Taulas",
 	"24-67-85_user": "Login utilisateur",
+	"24-67-85_user_placeholder": "ex: sam",
 	"24-67-85_password": "Mot de passe",
+	"24-67-85_password_placeholder": "ex: sam1234",
+	"device_name_placeholder": "Ex: zwave",
+	"device_decription_placeholder": "Ex: Connecteur zwave pour les gradateurs",
 	"device_add": "Ajout d'un dispositif", 
 	"device_add_success": "Dispositif ajouté", 
 	"device_add_error": "Erreur",
@@ -222,7 +238,9 @@
 	"dimmer_title": "Gradateurs",
 	"param_profiles_list": "Profils",
 	"profile_name": "Nom",
+	"profile_name_placeholder": "Ex: Entrée",
 	"profile_description": "Description",
+	"profile_description_placeholder": "Ex: Commandes pour l'entrée",
 	"profile_default": "Profil par défaut",
 	"profile_use": "Changer",
 	"profile_action": "Action",
@@ -277,6 +295,9 @@
 	"event_condition_benoic_dimmer": "Gradateur",
 	"event_condition_benoic_heater": "Thermostat",
 	"event_condition_benoic_sensor": "Capteur",
+	"event_name_placeholder": "Ex: 'Chauffage la nuit'",
+	"event_description_placeholder": "Ex: 'Eteindre le chauffage la nuit'",
+	"event_message_match_placeholder": "Valeur à tester",
 	"condition_switch_on": "allumé",
 	"condition_switch_off": "éteint",
 	"not_found": "Non trouvé",
@@ -376,9 +397,12 @@
 	"script_bind_table_select": "Sélectionné",
 	"script_bind_table_type": "Type",
 	"script_bind_table_display": "Nom",
+	"script_name_placeholder": "Ex: 'tout éteindre'",
+	"script_description_placeholder": "Ex: 'Éteindre toutes les lumières'",
 	"dashboard_button_add_title_line": "Ajouter un séparateur",
 	"dashboard_add_line": "Ajout d'un séparateur",
 	"dashboard_add_line_value": "Titre",
+	"dashboard_add_line_placeholder": "Ex: salon",
 	"dimmer_switch_off": "Éteindre",
 	"login": "Nom d'utilisateur",
 	"password": "Mot de passe",
@@ -386,6 +410,7 @@
 	"monitors_button_add": "Ajouter un tableau de mesures",
 	"monitor_new_title": "Nouvel historique de mesures",
 	"monitor_new_value": "Nom",
+	"monitor_new_placeholder": "Nom du moniteur",
 	"monitor_save": "Sauvegarde",
 	"monitor_save_success": "Succès",
 	"monitor_save_error": "Erreur",
