--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -38,6 +38,7 @@
 	"heater_mode_cool": "Cool",
 	"heater_mode_away": "Away",
 	"heater_mode_present": "Present",
+	"heater_unit_placeholder": "Ex °C or °F",
 	"monitor_title": "Monitor: ",
 	"monitor_close": "Close",
 	"monitor_date_axis": "Date",
@@ -69,6 +70,7 @@
 	"sensor_save_error": "Error",
 	"sensor_edit": "Edit",
 	"sensor_monitor": "Monitor",
+	"sensor_unit_placeholder": "°C, °F, %, etc.",
 	"switch_update_title": "Switch",
 	"switch_update_name": "Name: ",
 	"switch_update_enabled": "Enabled: ",
@@ -171,22 +173,36 @@
 	"device_options_title": "Type options",
 	"00-00-00_device_type": "Developpement",
 	"00-00-00_uri": "Connection URI",
+	"00-00-00_uri_placeholder": "ex: http://example.com/",
 	"00-00-00_baud": "Connection speed",
+	"00-00-00_baud_placeholder": "ex: 9600",
 	"00-00-00_do_not_check_certificate": "Do not check certificate",
 	"00-00-00_device_specified": "Options",
+	"00-00-00_device_specified_placeholder": "ex: A=1",
 	"24-67-99_device_type": "Openzwave device",
-	"24-67-99_uri": "URI to the ZWave device (ex: /dev/ttyACM)",
+	"24-67-99_uri": "URI to the ZWave device",
+	"24-67-99_uri_placeholder": "ex: /dev/ttyACM",
 	"24-67-99_config_path": "Path to Openzwave configuration folder",
+	"24-67-99_config_path_placeholder": "ex: /etc/openzwave",
 	"24-67-99_user_path": "Path to Openzwave working folder",
+	"24-67-99_user_path_placeholder": "ex: /var/lib/openzwave",
 	"24-67-99_command_line": "Openzwave command line options",
+	"24-67-99_command_line_placeholder": "ex: logging=true",
 	"24-67-99_log_path": "Openzwave log file name",
+	"24-67-99_log_path_placeholder": "ex: /var/log/openzwave/openzwave.log",
 	"24-67-85_device_type": "Taulas",
 	"24-67-85_uri": "Connection URL",
+	"24-67-85_uri_placeholder": "ex: http://taulas_host:858/taulas?command=",
+	"24-67-85_send_alert_uri_placeholder": "ex: http://taulas_host:858/taulas/alertCb?url=",
 	"24-67-85_send_alert_uri": "Alerte URL configuration",
 	"24-67-85_do_not_check_certificate": "Do not check certificate",
 	"24-67-85_old_version": "Old Taulas version",
 	"24-67-85_user": "Login",
+	"24-67-85_user_placeholder": "ex: sam",
 	"24-67-85_password": "Password",
+	"24-67-85_password_placeholder": "ex: sam1234",
+	"device_name_placeholder": "Ex: zwave",
+	"device_decription_placeholder": "Ex: Zwave connector for dimmers",
 	"device_add": "Add a device", 
 	"device_add_success": "Device added", 
 	"device_add_error": "Error",
@@ -222,7 +238,9 @@
 	"dimmer_title": "Dimmers",
 	"param_profiles_list": "Profiles",
 	"profile_name": "Name",
+	"profile_name_placeholder": "Ex: Lobby",
 	"profile_description": "Description",
+	"profile_description_placeholder": "Ex: Lobby commands",
 	"profile_default": "Default profile",
 	"profile_use": "Use",
 	"profile_action": "Action",
@@ -277,6 +295,9 @@
 	"event_condition_benoic_dimmer": "Dimmer",
 	"event_condition_benoic_heater": "Heater",
 	"event_condition_benoic_sensor": "Sensor",
+	"event_name_placeholder": "Ex: 'Night heaters'",
+	"event_description_placeholder": "Ex: 'Switch off heaters at night'",
+	"event_message_match_placeholder": "Value to test",
 	"condition_switch_on": "on",
 	"condition_switch_off": "off",
 	"not_found": "Not found",
@@ -376,9 +397,12 @@
 	"script_bind_table_select": "Selected",
 	"script_bind_table_type": "Type",
 	"script_bind_table_display": "Name",
+	"script_name_placeholder": "Ex: 'Switch all off'",
+	"script_description_placeholder": "Ex: 'Switch all lights off'",
 	"dashboard_button_add_title_line": "Add a separator",
 	"dashboard_add_line": "Add a separator",
 	"dashboard_add_line_value": "Title",
+	"dashboard_add_line_placeholder": "Ex: Living room",
 	"dimmer_switch_off": "Off",
 	"login": "User name",
 	"password": "Password",
@@ -386,6 +410,7 @@
 	"monitors_button_add": "Add a monitor",
 	"monitor_new_title": "New monitor",
 	"monitor_new_value": "Name",
+	"monitor_new_placeholder": "Name",
 	"monitor_save": "Save",
 	"monitor_save_success": "Success",
 	"monitor_save_error": "Error",
