Separate each refresh device in a different promise process, so if one is on error, the other one will wok properly

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -122,7 +122,7 @@
 	"profile_save_success": "Success",
 	"profile_save_error": "Error",
 	"angharad_loading_error": "Error while loading submodule Angharad",
-	"benoic_loading_error": "Error while loading submodule Benoic",
+	"benoic_loading_error": "Error while loading submodule Benoic on device {{name}}",
 	"carleon_loading_error": "Error while loading submodule Carleon",
 	"gareth_loading_error": "Error while loading submodule Gareth",
 	"login_sign_in": "Connection",
@@ -525,7 +525,7 @@
 	"alert_http_method_other": "Other",
 	"image_title": "Image: ",
 	"refresh": "Refresh",
-	"refresh_device_error": "Error during devices refresh",
+	"refresh_device_error": "Error refreshing device {{name}}",
 	"refresh_scripts_events_error": "Error during scripts and events refresh",
 	"refresh_carleon_error": "Error during carleon refresh",
 	"users_title": "Users and tokens",
