--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -122,7 +122,7 @@
 	"profile_save_success": "Succès",
 	"profile_save_error": "Erreur",
 	"angharad_loading_error": "Erreur lors du chargement de Angharad",
-	"benoic_loading_error": "Erreur lors du chargement du module Benoic",
+	"benoic_loading_error": "Erreur lors du chargement du module Benoic pour le dispositif {{name}}",
 	"carleon_loading_error": "Erreur lors du chargement du module Carleon",
 	"gareth_loading_error": "Erreur lors du chargement du module Gareth",
 	"login_sign_in": "Connexion",
@@ -525,7 +525,7 @@
 	"alert_http_method_other": "Autre",
 	"image_title": "Image: ",
 	"refresh": "Rafrachir",
-	"refresh_device_error": "Erreur lors du rafraîchissement des dispositifs domotiques",
+	"refresh_device_error": "Erreur lors du rafraîchissement du dispositif {{name}}",
 	"refresh_scripts_events_error": "Erreur lors du rafraîchissement des tâches et des événements",
 	"refresh_carleon_error": "Erreur lors du rafraîchissement des services Carleon",
 	"users_title": "Utilisateurs et jetons d'accès",
