OAuth2 response_type password in progress, add favicon

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -99,7 +99,9 @@
 	"top_right_menu_lang": "Language",
 	"top_right_menu_refresh": "Refresh",
 	"top_right_menu_profile": "Profile",
+	"top_right_menu_login": "Connect",
 	"top_right_menu_logout": "Disconnect",
+        "top_right_menu_access_denied": "Access denied",
 	"angharad_loading_title": "Angharad",
 	"benoic_loading_title": "Benoic",
 	"carleon_loading_title": "Carleon",
