--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -99,7 +99,9 @@
 	"top_right_menu_lang": "Langage",
 	"top_right_menu_refresh": "Rafraîchir",
 	"top_right_menu_profile": "Profil",
+	"top_right_menu_login": "Connexion",
 	"top_right_menu_logout": "Déconnexion",
+        "top_right_menu_access_denied": "Accès interdit",
 	"angharad_loading_title": "Angharad",
 	"benoic_loading_title": "Benoic",
 	"carleon_loading_title": "Carleon",
