Add a titles on left menu

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -101,7 +101,7 @@
 	"top_right_menu_profile": "Profile",
 	"top_right_menu_login": "Connect",
 	"top_right_menu_logout": "Disconnect",
-        "top_right_menu_access_denied": "Access denied",
+	"top_right_menu_access_denied": "Access denied",
 	"angharad_loading_title": "Angharad",
 	"benoic_loading_title": "Benoic",
 	"carleon_loading_title": "Carleon",
@@ -134,7 +134,7 @@
 	"login_validate": "OK",
 	"heaters_title": "Heaters",
 	"monitor": "Monitor",
-	"menu_home": "Home",
+	"menu_home": "Dashboard",
 	"menu_lights": "Lights/Switches",
 	"menu_heaters": "Heaters",
 	"menu_sensors": "Sensors",
@@ -142,7 +142,6 @@
 	"menu_events": "Events",
 	"menu_monitor": "Monitors",
 	"menu_logs": "Logs",
-	"menu_users": "Users and tokens",
 	"menu_parameters": "Parameters",
 	"dashboard_title": "Angharad Web Client",
 	"init_message_loading": "Loading",
