--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -134,7 +134,7 @@
 	"login_validate": "Valider",
 	"heaters_title": "Thermostats",
 	"monitor": "Moniteur",
-	"menu_home": "Accueil",
+	"menu_home": "Tableau de bord",
 	"menu_lights": "Lumières/Interrupteurs",
 	"menu_heaters": "Thermostats",
 	"menu_sensors": "Capteurs",
@@ -142,7 +142,6 @@
 	"menu_events": "Événements",
 	"menu_monitor": "Mesures",
 	"menu_logs": "Journaux",
-	"menu_users": "Utilisateurs et jetons",
 	"menu_parameters": "Paramètres",
 	"dashboard_title": "Client Web Angharad",
 	"init_message_loading": "Chargement",
