Fix refresh after sleep mode, show error message on login denied, remove unnecessary labels

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -529,41 +529,5 @@
 	"refresh_device_error": "Error refreshing device {{name}}",
 	"refresh_scripts_events_error": "Error during scripts and events refresh",
 	"refresh_carleon_error": "Error during carleon refresh",
-	"users_title": "Users and tokens",
-	"users_user_disabled": "Users management disabled on Angharad server",
-	"users_user_list": "User list",
-	"users_token_list": "Token list",
-	"users_get_user_list": "User list",
-	"users_get_user_list_error": "Error during getting user list",
-	"users_get_token_list": "Token list",
-	"users_get_token_list_error": "Error during getting token list",
-	"users_add_user": "Add a new user",
-	"users_table_login": "Login",
-	"users_table_password": "Password",
-	"users_table_enabled": "Enabled",
-	"users_save_user": "Save user",
-	"users_save_user_success": "Success",
-	"users_save_user_error": "Error",
-	"users_user_remove": "Remove user",
-	"users_user_remove_confirm": "Are you ure you want to remove user {{login}} ?",
-	"users_user_remove_success": "Success",
-	"users_user_remove_error": "Error",
-	"users_user_change_password": "Change password",
-	"users_user_delete": "Remove user",
-	"users_table_token_login": "Login used",
-	"users_table_token_value": "Token",
-	"users_table_token_validity": "Valid until",
-	"users_table_token_lastseen": "Last access",
-	"users_table_token_revoke": "Revoke",
-	"users_token_revoked": "Revoked",
-	"users_token_revoke": "Revoke token",
-	"users_token_revoke_confirm": "Are you sure you want to revoke this token ? THis operation can't be undone.",
-	"users_token_revoke_success": "Success",
-	"users_token_revoke_error": "Error",
-	"users_token_search_login": "Login",
-	"users_token_search_enabled": "Enabled",
-	"users_token_search_enabled_all": "All",
-	"users_token_search_enabled_true": "Yes",
-	"users_token_search_enabled_false": "No",
-	"users_search_button": "Search"
+  "access_denied": "Access denied"
 }
