--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -529,41 +529,5 @@
 	"refresh_device_error": "Erreur lors du rafraîchissement du dispositif {{name}}",
 	"refresh_scripts_events_error": "Erreur lors du rafraîchissement des tâches et des événements",
 	"refresh_carleon_error": "Erreur lors du rafraîchissement des services Carleon",
-	"users_title": "Utilisateurs et jetons d'accès",
-	"users_user_disabled": "Gestion des utilisteurs désactivé sur le serveur Angharad",
-	"users_user_list": "Liste des utilisateurs",
-	"users_token_list": "Liste des jetons d'accès",
-	"users_get_user_list": "Liste des utilisateurs",
-	"users_get_user_list_error": "Erreur lors de la récupération de la liste des utilisateurs",
-	"users_get_token_list": "Liste des jetons",
-	"users_get_token_list_error": "Erreur lors de la récupération des jetons d'accès",
-	"users_add_user": "Ajouter un nouvel utilisateur",
-	"users_table_login": "Login",
-	"users_table_password": "Mot de passe",
-	"users_table_enabled": "Actif",
-	"users_save_user": "Sauvegarde de l'utilisateur",
-	"users_save_user_success": "Succès",
-	"users_save_user_error": "Erreur",
-	"users_user_remove": "Suppression d'un utilisateur",
-	"users_user_remove_confirm": "Êtes-vous sûr de vouloir supprimer l'utilisateur {{login}} ?",
-	"users_user_remove_success": "Succès",
-	"users_user_remove_error": "Erreur",
-	"users_user_change_password": "Changer le mot de passe",
-	"users_user_delete": "Supprimer l'utilisateur",
-	"users_table_token_login": "Login associé",
-	"users_table_token_value": "Jeton",
-	"users_table_token_validity": "Valide jusqu'au",
-	"users_table_token_lastseen": "Dernier accès",
-	"users_table_token_revoke": "Révoquer",
-	"users_token_revoked": "Révoqué",
-	"users_token_revoke": "Révoquer le jeton",
-	"users_token_revoke_confirm": "Êtes-vous sûr de vouloir révoquer ce jeton ? Cette opération est irréversible.",
-	"users_token_revoke_success": "Succès",
-	"users_token_revoke_error": "Erreur",
-	"users_token_search_login": "Login",
-	"users_token_search_enabled": "Actif",
-	"users_token_search_enabled_all": "Tous",
-	"users_token_search_enabled_true": "Oui",
-	"users_token_search_enabled_false": "Non",
-	"users_search_button": "Rechercher"
+  "access_denied": "Accès refusé"
 }
