Use a config.json file instead of a compiled .js, upgrade MPD component to add new actions and link it to a switch, add Makefile to build sagremor, upgrade oauth-ng to 0.5.1

--- a/src/components/carleonMpd/i18n/en.json
+++ b/src/components/carleonMpd/i18n/en.json
@@ -7,6 +7,7 @@
 	"carleon_mpd_modal_host": "Host",
 	"carleon_mpd_modal_port": "Port",
 	"carleon_mpd_modal_password": "Password",
+	"carleon_mpd_modal_switch": "Switch attached",
 	"carleon_mpd_save": "Jukebox save",
 	"carleon_mpd_save_success": "Success",
 	"carleon_mpd_save_error": "Error",
